<resources>
    <string name="app_name">Photo Time Grouper</string>
    <string name="photo_image">Photo image</string>
    <string name="view_mode_extra_large_icon">超大图标</string>
    <string name="view_mode_large_icon">大图标</string>
    <string name="view_mode_small_icon">小图标</string>
    <string name="view_mode_details">详细信息</string>
    <string name="view_mode_menu_title">查看方式</string>
    <string name="video_play">播放视频</string>
    <string name="privacy_policy">隐私政策</string>
    <string name="selected_count">已选择 %d 项</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="cancel">取消</string>
    <string name="select_all">全选</string>
    <string name="deselect_all">取消全选</string>
    <string name="delete_confirm">确定要删除选中的 %d 项吗？</string>
    <string name="delete_success">已删除 %d 项</string>
    <string name="delete_failed">删除失败</string>
    <string name="favorite">收藏</string>
    <string name="unfavorite">取消收藏</string>
    <string name="show_favorites">显示收藏</string>
    <string name="show_all">显示全部</string>
    <string name="search">搜索</string>
    <string name="search_hint">搜索照片名称...</string>
    <string name="filter_by_date">按日期筛选</string>
    <string name="filter_by_type">按类型筛选</string>
    <string name="photos_only">仅照片</string>
    <string name="videos_only">仅视频</string>
    <string name="all_media">全部</string>
    <string name="recycle_bin_demo">回收站（预览版）</string>
    <string name="browse_folders">按文件夹浏览</string>
    <string name="browse_by_time">按时间浏览</string>
    <string name="go_back">返回</string>
    <string name="favorites_title">收藏</string>
    <string name="photos">照片</string>
    <string name="albums">相册</string>
    <string name="more">更多</string>
    <string name="filter">筛选</string>
    <string name="view_mode">视图模式</string>
    <string name="apply">应用</string>
    <string name="clear_all">清除全部</string>
</resources>
